Feat: Refactor openai API & routes & tests + Dockerize backend
